deployment/kubernetes/09-backend-object.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-microservice
  namespace: default
  labels:
    app: object-microservice
    api: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-microservice
  template:
    metadata:
      labels:
        app: object-microservice
        api: external
    spec:
      containers:
        - image: ghcr.io/neverland3124/mindmappers-backend-object-microservice:latest
          name: object-microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi" # Kubernetes guarantees 64Mi of memory to the container
              cpu: "250m" # Kubernetes guarantees 250 millicores (0.25 CPU) to the container
            limits:
              memory: "1024Mi" # The container can use up to 1024Mi of memory
              cpu: "500m" # The container can use up to 500 millicores (0.5 CPU)
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: object-microservice
  namespace: default
  labels:
    app: object-microservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: grpc
      port: 50051 # gRPC port
      targetPort: 50051 # gRPC target port
  selector:
    app: object-microservice
