deployment/kubernetes/10-backend-image.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-microservice
  namespace: default
  labels:
    app: image-microservice
    api: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-microservice
  template:
    metadata:
      labels:
        app: image-microservice
        api: external
    spec:
      containers:
        - image: ghcr.io/neverland3124/mindmappers-backend-image-microservice:latest
          name: image-microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi" # Kubernetes guarantees 64Mi of memory to the container
              cpu: "250m" # Kubernetes guarantees 250 millicores (0.25 CPU) to the container
            limits:
              memory: "1024Mi" # The container can use up to 1024Mi of memory
              cpu: "500m" # The container can use up to 500 millicores (0.5 CPU)
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: image-microservice
  namespace: default
  labels:
    app: image-microservice
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: image-microservice
